--- a/test site tcc/analuiza.html
+++ b/test site tcc/analuiza.html
@@ -138,10 +138,6 @@
                 >Curriculo</a
               >
               <a
-                href="www.google.com"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Instagram</a
               >
             </div>
           </div>
@@ -184,7 +180,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
