--- a/test site tcc/index.html
+++ b/test site tcc/index.html
@@ -68,15 +68,15 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> Equipe </a>
+              <a href="./index.html#about"> sobre nós </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
+              <a href="./index.html#projects"> Membros </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
+              <a href="./index.html#contact"> Contato </a>
             </li>
           </ul>
         </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="home-hero__social">
           <a
-            href="#"
+            href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
@@ -226,7 +226,7 @@
                 Ana, uma jovem de apenas 16 anos, é uma estudante nascida e residente em Belo Horizonte, que se esforça continuamente para aprimorar suas habilidades e se tornar uma profissional exemplar
               </p>
               <a
-                href="./project-1.html"
+                href="analuiza.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Ver Profissional</a
@@ -269,12 +269,12 @@
             </div>
 
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Gregory  </h3>
+              <h3 class="projects__row-content-title">Gregory Mazali </h3>
               <p class="projects__row-content-desc">
-                Descrição do gregory
+                Estudante de Ciências da Computação na FMU. Ele está atualmente cursando a faculdade e busca constantemente aprimorar suas habilidades na área de TI.
               </p>
               <a
-                href="./project-4.html"
+                href="gregory.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Ver Profissional</a
@@ -323,7 +323,7 @@
                 Descrição da Manuela
               </p>
               <a
-                href="./project-2.html"
+                href="manuela.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Ver Profissional</a
@@ -347,7 +347,7 @@
                 Entre eles esta: Lambda, CloudFront, S3, AWF e diversos...
               </p>
               <a
-                href="./project-2.html"
+                href="raibarbosa.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >ver profissional</a
@@ -444,7 +444,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
