--- a/test site tcc/jose.html
+++ b/test site tcc/jose.html
@@ -68,11 +68,11 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
+              <a href="./index.html#about"> sobre nós </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
+              <a href="./index.html#projects"> Membros </a>
             </li>
 
             <li class="header__sm-menu-link">
@@ -127,7 +127,7 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">Links adicionais</h3>
               <a
-                href="#"
+                href="https://drive.google.com/file/d/1RsO8w-rGNPtTfclODJmGo_GGkBPDz0Zy/view?usp=sharing"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Curriculo</a
@@ -175,7 +175,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
