--- a/test site tcc/daniela.html
+++ b/test site tcc/daniela.html
@@ -176,7 +176,7 @@ Capacidade de trabalhar em ambiente virtual, comprometimento, resiliência e ada
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
