--- a/test site tcc/gregory.html
+++ b/test site tcc/gregory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>José Jair Santos Da Costa</title>
+    <title>Gregory Mazali</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -84,10 +84,10 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">José Jair Santos Da Costa</h1>
+        <h1 class="heading-primary">Gregory Mazali</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            José Jair  não sabe o que escrever aqui
+            Gregory Mazali, de 31 anos, é um estudante de Ciências da Computação na FMU. Ele está atualmente cursando a faculdade e busca constantemente aprimorar suas habilidades na área de TI. Em 2022, concluiu com sucesso o curso profissionalizante CCNA1 e também está adquirindo conhecimentos na plataforma da nuvem AWS.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -109,10 +109,17 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Descrição de Profissional</h3>
               <p class="project-details__desc-para">
-                AQUI É BOM FALAR SOBRE MIM E MINHA HISTORIA
+                Gregory Mazali, de 31 anos, é um estudante de Ciências da Computação na FMU. Ele está atualmente cursando a faculdade e busca constantemente aprimorar suas habilidades na área de TI. Em 2022, concluiu com sucesso o curso profissionalizante CCNA1 e também está adquirindo conhecimentos na plataforma da nuvem AWS.
+
+
+Sua experiência inclui um estágio recente em TI a partir de agosto de 2023. Anteriormente, trabalhou por quatro anos como Técnico em Mecatrônica na Avenues, desenvolvendo habilidades analíticas e de trabalho em equipe.
+
               </p>
               <p class="project-details__desc-para">
-                Continuação...
+                Além das habilidades técnicas, como conhecimento do pacote Office e noções básicas de inglês, Gregory é um comunicador eficaz, trabalha bem em equipe e aborda problemas com uma mentalidade analítica.
+
+
+Com foco em arquitetura, redes e nuvem, Gregory almeja uma carreira de sucesso na área de TI. Sua abordagem dinâmica e paixão por tecnologia impulsionam sua busca por desafios e crescimento profissional.
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -136,16 +143,12 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">Links adicionais</h3>
               <a
-                href="file:///C:/Users/jairq/Documents/jair/jair.curriculo_novo.pdf"
+                href="https://drive.google.com/file/d/1GFdYH-_tX3h1O9zBfmMRpvuxV39r7Rsk/view?usp=sharing"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Curriculo</a
               >
               <a
-                href="www.google.com"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Instagram</a
               >
             </div>
           </div>
@@ -188,7 +191,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
