--- a/test site tcc/manuela.html
+++ b/test site tcc/manuela.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>jose jair</title>
+    <title>Manuela França </title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -84,14 +84,14 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">jose jair</h1>
+        <h1 class="heading-primary">Manuela França </h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
             Ana Luiza  não sabe o que escrever aqui
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://www.linkedin.com/in/jair-santos-informatica/" class="btn btn--bg" target="_blank">linkedin</a>
+          <a href="https://www.linkedin.com/in/manuela-frança-8b3684217/" class="btn btn--bg" target="_blank">linkedin</a>
         </div>
       </div>
     </section>
@@ -121,31 +121,21 @@
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
                 <div class="skills__skill">SASS</div>
                 <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
                 <div class="skills__skill">AWS</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">Links adicionais</h3>
               <a
-                href="file:///C:/Users/jairq/Documents/jair/jair.curriculo_novo.pdf"
+                href="https://drive.google.com/file/d/10n6ipb3HAe2RcA71J6tltGsowK7-KjF3/view?usp=sharing"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Curriculo</a
               >
               <a
-                href="www.google.com"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Instagram</a
+                
               >
             </div>
           </div>
@@ -188,7 +178,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
