--- a/jose.html
+++ b/jose.html
@@ -76,7 +76,7 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
+              <a href="./index.html#contact"> Contato </a>
             </li>
           </ul>
         </div>
