--- a/manuela.html
+++ b/manuela.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Manuela França </h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Olá. Me chamo Manuela Edvania 
+            Sou apaixonada pela área da tecnologia, e principalmente pela área de qualidade. A qualidade é algo que deixa nosso coração quentinho, por isso quero dedicar a minha vida a isso.
           </p>
         </div>
         <div class="project-cs-hero__cta">
