--- a/raibarbosa.html
+++ b/raibarbosa.html
@@ -68,15 +68,15 @@
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
+              <a href="./index.html#about"> sobre nós </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
+              <a href="./index.html#projects"> Membros </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
+              <a href="./index.html#contact"> Contato </a>
             </li>
           </ul>
         </div>
@@ -109,12 +109,24 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Descrição Profissional</h3>
               <p class="project-details__desc-para">
-                Olá, o meu nome é Raí Barbosa de Freitas, tenho 18 anos de idade, atualmente estou estudando AWS e comecei a estudar JAVA.
-                Estou sempre procurando cursos para melhorar o meu profissional e pessoal.
+                Meu nome é Raí Barbosa de Freitas, sei:  HTML, CSS e Javascript. 
+
+Estou aprendendo AWS, consigo integrar sites hospedados na AWS. 
               </p>
               <p class="project-details__desc-para">
-                Estive na vanguarda do site junto com o meu colega jair, eu também já fiz sites em wordpress para empresas e trbalhos da escola.
+                Sempre fui aquela criança curiosa que gostava as coisas, questiona tudo e ainda questiono, coisas do tipo: como esse serviço da AWS pode ficar mais barato? será que dá para usar uma EC2 para rodar essa aplicação? 
+ 
               </p>
+
+            </p>
+            <p class="project-details__desc-para">
+              Hoje eu tenho 18 anos, tive na frente desse site criando a página de cada um dos meus lindos colegas, 
+
+Amo trabalhar em grupo porque além do projeto ficar mais fácil, crio diversas conversar que acabo aprendendo muito sobre a vida... 
+
+Adoro aprender e ensinar o que eu entendi sobre o assunto.
+
+            </p>
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Ferramentas Utilizadas</h3>
