--- a/jose.html
+++ b/jose.html
@@ -87,7 +87,9 @@
         <h1 class="heading-primary">José Jair Santos da Costa</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Um pequeno resumo sobre você
+            Meu nome é jose jair santos da costa, moro na cidade Fortaleza-Ceará, sei: HTML, CSS, Javascript, React e Desenvolvedor Front 
+End. Estou aprendendo AWS, consigo integrar sites hospedados 
+na AWS.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -109,10 +111,18 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Descrição Profissional</h3>
               <p class="project-details__desc-para">
-                Conte a sua historia
+                Meu nome é jose jair santos da costa, moro na cidade Fortaleza-Ceará, sei: HTML, CSS, Javascript, React e Desenvolvedor Front 
+End. Estou aprendendo AWS, consigo integrar sites hospedados 
+na AWS.
               </p>
               <p class="project-details__desc-para">
-                Continuação...
+                Estou fazendo faculdade na Estácio, o curso Análise e 
+Desenvolvimento de Sistemas no terceiro Semestre, gosto de 
+tecnologia e sistemas, estou sempre estudando e a perfeiçoando
+na área da tecnologia, o curso da Escola da Nuvem estou 
+aprendendo a hospedar sites na AWS, é aprendizado muito bom, 
+gosto de ensinar e trabalhar em equipe e aprender tudo sobre 
+tecnologia e fazer projetos.
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -120,8 +130,9 @@
               <div class="skills">
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JAVA</div>
+                <div class="skills__skill">Javascript</div>
                 <div class="skills__skill">AWS</div>
+                <div class="skills__skill">React</div>
               </div>
             </div>
             <div class="project-details__links">
@@ -169,11 +180,6 @@
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
-                  alt="icon"
-                />
               </a>
               <a target="_blank" rel="noreferrer" href="https://www.instagram.com/imperioaws/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
                 <img
